[package]
name = "echodwat"
version = "0.1.0"
authors = ["William Hottenstein <whottenstein2019@my.fit.edu>"]
license = "MIT"
description = "A Rust implementation of the echo CLI command"
readme = "README.md"
homepage = "https://github.com/MysticDwat/echodwat"
repository = "https://github.com/MysticDwat/echodwat"
keywords = ["cli", "terminal"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
